Windows compilation fixes.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@238 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Utilities/CMakeLists.txt
+++ b/Projects/CoX/Utilities/CMakeLists.txt
@@ -1,5 +1,5 @@
 # $Id$
-OPTION(BLD_COX_MAP_VIEWER "Build CoX map file viewer ?" OFF)
-IF(BLD_COX_MAP_VIEWER)
+OPTION(BUILD_COX_MAP_VIEWER "Build CoX map file viewer ?" OFF)
+IF(BUILD_COX_MAP_VIEWER)
   ADD_SUBDIRECTORY(MapViewer)
-ENDIF(BLD_COX_MAP_VIEWER)
+ENDIF(BUILD_COX_MAP_VIEWER)
