Starting on entites update packets
git-svn-id: svn://svn.code.sf.net/p/segs/code2@246 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -12,6 +12,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/src/MapLink.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/NetCommandManager.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/Events/NewEntity.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/Events/SceneEvent.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/Events/EntitiesResponse.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/NetCommandManager.h
@@ -27,6 +28,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include/MapRef.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/MapServer.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Events/NewEntity.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Events/SceneEvent.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/Events/EntitiesResponse.h
 )
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
