SUpport for db_port configuration variable. Fixed valgrind warning about using uninitialized memory.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@249 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Data/local_1.cfg
+++ b/Projects/CoX/Data/local_1.cfg
@@ -2,12 +2,14 @@
 
 [AdminServer/AccountDatabase]
 db_host = "database_server_ip"
+db_port = "5432"
 db_name = "segs"
 db_user = "segsadmin"
 db_pass = "segs123"
 
 [AdminServer/CharacterDatabase]
 db_host = "database_server_ip"
+db_port = "5432"
 db_name = "segs_game"
 db_user = "segsadmin"
 db_pass = "segs123"
