--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,7 @@ SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts;${CMAKE_MODULE_PATH})
 INCLUDE(SEGS_Components)
 
 IF(CMAKE_CXX_COMPILER MATCHES cl)
-     IF(CMAKE_GENERATOR STREQUAL "Visual Studio 8 2005")
-    add_definitions( -D_CRT_SECURE_NO_WARNINGS )
-     ENDIF(CMAKE_GENERATOR STREQUAL "Visual Studio 8 2005")
+    add_definitions( -D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_WARNINGS)
 ENDIF (CMAKE_CXX_COMPILER MATCHES cl)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/include)
