Small build system change, linking debug version of ACE libraries should work now. Added preliminary version of FindMsgPack.cmake. Removed OgrePanel from the build. Temporarily removed Example client's Auth component.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@261 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
+++ b/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
@@ -57,11 +57,12 @@ ${gui_MOC_SRC} ${gui_UI_H}
 
 ADD_EXECUTABLE(mapviewer ${target_SOURCES})
 
+ACE_ADD_LIBRARIES(mapviewer ACE)
 TARGET_LINK_LIBRARIES(mapviewer   ${target_DEPENDS}
-    ${ACE_lib}
     ${CMAKE_THREAD_LIBS_INIT}
     ${OPENSCENEGRAPH_LIBRARIES}
     ${QT_LIBRARIES}
 )
+
 ADD_DEPENDENCIES(mapviewer ${target_DEPENDS})
 
