--- a/Projects/CoX/Servers/AuthServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/AuthServer/CMakeLists.txt
@@ -41,8 +41,8 @@ ADD_LIBRARY(authserver_lib STATIC ${target_SOURCES})
 IF(BUILD_SEPARATE)
 	ADD_DEFINITIONS(-DSEPARATE)
 	ADD_EXECUTABLE(authserver ${authserver_standaloneSRCS})
+	ACE_ADD_LIBRARIES(authserver ACE)
     TARGET_LINK_LIBRARIES(authserver   ${target_DEPENDS} authserver_lib
-                    						${ACE_lib} 
                     						${PGSQL_lib} 
                     						${ZLIB_LIBRARIES}
                     						${CMAKE_THREAD_LIBS_INIT})
