Fixed FindMsgPack.cmake Using MsgPack INCLUDE/LIBRARY variables in Example01/Clients/ConsoleBased/CMakeLists.txt
git-svn-id: svn://svn.code.sf.net/p/segs/code2@262 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/Example01/Clients/ConsoleBased/CMakeLists.txt
+++ b/Projects/Example01/Clients/ConsoleBased/CMakeLists.txt
@@ -10,7 +10,7 @@ SET(target_INCLUDE_DIR
 
 FIND_PACKAGE(ACE REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
- 
+FIND_PACKAGE(MsgPack REQUIRED)
 ADD_DEFINITIONS( 
   -D_CRT_SECURE_NO_WARNINGS
   -D_LIB
@@ -19,7 +19,7 @@ ADD_DEFINITIONS(
 #SEGS_ADD_COMPONENT(Auth SOURCE)
 
 INCLUDE_DIRECTORIES(
-	${MAIN_INCLUDE_PATH}
+	${MsgPack_INCLUDE_DIR}
 	${target_INCLUDE_DIR}
 	${ACE_path}
 )
@@ -39,6 +39,7 @@ ACE_ADD_LIBRARIES(segs_client_example_01_cli ACE)
 TARGET_LINK_LIBRARIES(segs_client_example_01_cli segs_common 
 						${ZLIB_LIBRARIES}
 						${CMAKE_THREAD_LIBS_INIT}
+						${MsgPack_LIBRARY}
 						ws2_32
 						)
 						
