Added Qt based client directory structure
git-svn-id: svn://svn.code.sf.net/p/segs/code2@265 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/Example01/Clients/CMakeLists.txt
+++ b/Projects/Example01/Clients/CMakeLists.txt
@@ -1,3 +1,11 @@
+OPTION(Example01_QtClient "Build Qt based PC client ?" OFF)
+OPTION(Example01_ConsoleClient "Build commandline based PC client ?" OFF)
 
 #ADD_SUBDIRECTORY(Auth)
-ADD_SUBDIRECTORY(ConsoleBased)
+IF(Example01_ConsoleClient)
+  ADD_SUBDIRECTORY(ConsoleBased)
+ENDIF()
+
+IF(Example01_QtClient)
+  ADD_SUBDIRECTORY(QtBased)
+ENDIF()
