--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,10 @@ SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts;${CMAKE_MODULE_PATH})
 
 INCLUDE(SEGS_Components)
 
+add_definitions(-D__STDC_FORMAT_MACROS)
 IF(CMAKE_CXX_COMPILER MATCHES cl)
     add_definitions( -D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_WARNINGS)
-ENDIF (CMAKE_CXX_COMPILER MATCHES cl)
+ENDIF(CMAKE_CXX_COMPILER MATCHES cl)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/include)
 ADD_SUBDIRECTORY(Components)
