Fix for 'cl' matching both MSVC and clang compilers in ACE debuging  selection Removed BitStream dependency on ACE logging headers Some whitespace cleanups
git-svn-id: svn://svn.code.sf.net/p/segs/code2@281 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Common/AuthProtocol/CMakeLists.txt
+++ b/Projects/CoX/Common/AuthProtocol/CMakeLists.txt
@@ -2,7 +2,7 @@
 # $Id$
 SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/src/AuthEventFactory.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/src/AuthPacketCodec.cpp 
+${CMAKE_CURRENT_SOURCE_DIR}/src/AuthPacketCodec.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/Events/ServerListResponse.cpp
 )
 SET(target_INCLUDE
@@ -20,12 +20,13 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include/Events/LoginRequest.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Events/ServerListResponse.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Events/ServerListRequest.h
 )
-FIND_PACKAGE(Boost)
+set(Boost_ADDITIONAL_VERSIONS "1.51" "1.51.0")
+FIND_PACKAGE(Boost COMPONENTS system REQUIRED)
 
-SET(target_INCLUDE_DIR 
-	"${CMAKE_CURRENT_SOURCE_DIR}/include" 
-	"${CMAKE_CURRENT_SOURCE_DIR}/include/Events"
-	${Boost_INCLUDE_DIRS}
+SET(target_INCLUDE_DIR
+        "${CMAKE_CURRENT_SOURCE_DIR}/include"
+        "${CMAKE_CURRENT_SOURCE_DIR}/include/Events"
+        ${Boost_INCLUDE_DIRS}
 )
 # add components here
 SEGS_ADD_COMPONENT(EventSystem LIB)
