--- a/Projects/CoX/Servers/CMakeLists.txt
+++ b/Projects/CoX/Servers/CMakeLists.txt
@@ -14,6 +14,7 @@ OPTION(BUILD_SEPARATE "When set to 1 this will build each server as a separate e
 
 
 # BOOST
+#FIND_PACKAGE(Boost REQUIRED)
 FIND_PACKAGE(ACE REQUIRED) # ACE framework
 FIND_PACKAGE(POSTGRE REQUIRED) # PostgreSQL
 FIND_PACKAGE(ZLIB REQUIRED)
@@ -24,7 +25,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${ACE_path})
 INCLUDE_DIRECTORIES(${PGSQL_path})
-INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+#INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 
 ADD_SUBDIRECTORY(AdminServer)
 ADD_SUBDIRECTORY(GameServer)
