--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 PROJECT(SEGS)
+IF(CMAKE_CXX_COMPILER MATCHES cl.exe)
+    add_definitions( -D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_WARNINGS)
+ELSE()
+   SET(CMAKE_CXX_FLAGS "-Wall -std=c++0x"  )
+ENDIF()
 SET(CMAKE_BUILD_TYPE Debug)
 SET(MAIN_INCLUDE_PATH $ENV{INCLUDE} CACHE PATH "Includes")
 SET(MAIN_LIB_PATH $ENV{LIB} CACHE PATH "Libraries")
@@ -12,9 +17,7 @@ SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts;${CMAKE_MODULE_PATH})
 INCLUDE(SEGS_Components)
 
 add_definitions(-D__STDC_FORMAT_MACROS)
-IF(CMAKE_CXX_COMPILER MATCHES cl)
-    add_definitions( -D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_WARNINGS)
-ENDIF(CMAKE_CXX_COMPILER MATCHES cl)
+
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/include)
 ADD_SUBDIRECTORY(Components)
