Small fix in SEGSTimer destructor.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@303 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
+++ b/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
@@ -1,7 +1,7 @@
 # $Id$
 FIND_PACKAGE(ACE REQUIRED)
 #SET(OpenSceneGraph_DEBUG TRUE)
-FIND_PACKAGE(OpenSceneGraph REQUIRED osgUtil osgText osgViewer)
+FIND_PACKAGE(OpenSceneGraph REQUIRED osgUtil osgText osgViewer osgGA)
 FIND_PACKAGE(Qt COMPONENTS Gui Core REQUIRED)
 
 ################# Qt Ui related ###############################################
