Changes to use '3rd_party' and 'out' directories Should help with windows compiles
git-svn-id: svn://svn.code.sf.net/p/segs/code2@305 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,9 @@ ELSE()
    SET(CMAKE_CXX_FLAGS "-Wall -std=c++0x"  )
 ENDIF()
 SET(CMAKE_BUILD_TYPE Debug)
-SET(MAIN_INCLUDE_PATH $ENV{INCLUDE} CACHE PATH "Includes")
-SET(MAIN_LIB_PATH $ENV{LIB} CACHE PATH "Libraries")
+SET(MAIN_INCLUDE_PATH ${PROJECT_SOURCE_DIR}/3rd_party/include CACHE PATH "Includes")
+SET(MAIN_LIB_PATH ${PROJECT_SOURCE_DIR}/3rd_party/lib CACHE PATH "Libraries")
+SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/out)
 
 SET(CMAKE_INCLUDE_PATH ${MAIN_INCLUDE_PATH})
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts;${CMAKE_MODULE_PATH})
