--- a/Projects/Example01/Clients/ConsoleBased/CMakeLists.txt
+++ b/Projects/Example01/Clients/ConsoleBased/CMakeLists.txt
@@ -4,14 +4,14 @@ ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
 SET(target_INCLUDE
 #${CMAKE_CURRENT_SOURCE_DIR}/include/Avatar.h
 )
-SET(target_INCLUDE_DIR 
-	${CMAKE_CURRENT_SOURCE_DIR}/include
+SET(target_INCLUDE_DIR
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
 FIND_PACKAGE(ACE REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
 FIND_PACKAGE(MsgPack REQUIRED)
-ADD_DEFINITIONS( 
+ADD_DEFINITIONS(
   -D_CRT_SECURE_NO_WARNINGS
   -D_LIB
 )
@@ -19,9 +19,9 @@ ADD_DEFINITIONS(
 #SEGS_ADD_COMPONENT(Auth SOURCE)
 
 INCLUDE_DIRECTORIES(
-	${MsgPack_INCLUDE_DIR}
-	${target_INCLUDE_DIR}
-	${ACE_path}
+        ${MsgPack_INCLUDE_DIR}
+        ${target_INCLUDE_DIR}
+        ${ACE_path}
 )
 
 SET (target_SOURCES
@@ -30,17 +30,18 @@ ${target_INCLUDE}
 )
 
 IF(WIN32)
-	ADD_EXECUTABLE( segs_client_example_01_cli WIN32 ${target_SOURCES} )
-	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /subsystem:console")
+        ADD_EXECUTABLE( segs_client_example_01_cli ${target_SOURCES} )
+        SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /subsystem:console")
+        TARGET_LINK_LIBRARIES(segs_client_example_01_cli ws2_32)
 ELSE(WIN32)
-	ADD_EXECUTABLE( segs_client_example_01_cli ${target_SOURCES} )
+        ADD_EXECUTABLE( segs_client_example_01_cli ${target_SOURCES} )
 ENDIF(WIN32)
+
 ACE_ADD_LIBRARIES(segs_client_example_01_cli ACE)
-TARGET_LINK_LIBRARIES(segs_client_example_01_cli segs_common 
-						${ZLIB_LIBRARIES}
-						${CMAKE_THREAD_LIBS_INIT}
-						${MsgPack_LIBRARY}
-						ws2_32
-						)
-						
-ADD_DEPENDENCIES(segs_client_example_01_cli authserver_lib segs_common gameserver_lib) 
+TARGET_LINK_LIBRARIES(segs_client_example_01_cli segs_common
+                                                ${ZLIB_LIBRARIES}
+                                                ${CMAKE_THREAD_LIBS_INIT}
+                                                ${MsgPack_LIBRARY}
+                                                )
+
+ADD_DEPENDENCIES(segs_client_example_01_cli authserver_lib segs_common gameserver_lib)
