--- a/Components/Common/CMakeLists.txt
+++ b/Components/Common/CMakeLists.txt
@@ -4,4 +4,5 @@ ADD_SUBDIRECTORY(EventSystem)
 ADD_SUBDIRECTORY(GrowingBuffer)
 ADD_SUBDIRECTORY(Bitstream)
 ADD_SUBDIRECTORY(CRUDP_Protocol)
+ADD_SUBDIRECTORY(Scripting)
 
