--- a/Projects/CoX/Common/Servers/CMakeLists.txt
+++ b/Projects/CoX/Common/Servers/CMakeLists.txt
@@ -29,7 +29,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include/CRUD_Events.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/crud_link.inl
 )
 
-FIND_PACKAGE(POSTGRE REQUIRED)
+FIND_PACKAGE(PostgreSQL REQUIRED)
 FIND_PACKAGE(ACE REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
 
@@ -46,7 +46,7 @@ ${target_INCLUDE}
 )
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
-INCLUDE_DIRECTORIES(${PGSQL_path})
+INCLUDE_DIRECTORIES(${PostgreSQL_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${ACE_path})
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 
