Made script engine build, optional.

--- a/Components/Common/CMakeLists.txt
+++ b/Components/Common/CMakeLists.txt
@@ -4,5 +4,10 @@ ADD_SUBDIRECTORY(EventSystem)
 ADD_SUBDIRECTORY(GrowingBuffer)
 ADD_SUBDIRECTORY(Bitstream)
 ADD_SUBDIRECTORY(CRUDP_Protocol)
-ADD_SUBDIRECTORY(Scripting)
+if(SCRIPTING_ENGINE)
+    ADD_SUBDIRECTORY(Scripting)
+endif()
+
+
+
 
