--- a/Projects/CoX/Servers/AuthServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/AuthServer/CMakeLists.txt
@@ -22,7 +22,10 @@ SEGS_ADD_COMPONENT(static_storage LIB)
 SEGS_ADD_COMPONENT(adminserver_lib LIB)
 SEGS_ADD_COMPONENT(gameserver_lib LIB)
 SEGS_ADD_COMPONENT(mapserver_lib LIB)
-SEGS_ADD_COMPONENT(MRuby LIB)
+if(SCRIPTING_ENGINE)
+    SEGS_ADD_COMPONENT(MRuby LIB)
+endif()
+
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 
 SET (target_SOURCES
