--- a/Components/Common/Globals/CMakeLists.txt
+++ b/Components/Common/Globals/CMakeLists.txt
@@ -1,23 +1,10 @@
-SET(target_CPP
-)
-SET(target_INCLUDE
-${CMAKE_CURRENT_SOURCE_DIR}/include/Base.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/types.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/version.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/math_constants
-)
+SET(target_CPP)
+SET(target_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include/version.h)
 
-SET (target_SOURCES
-${target_CPP}
-${target_INCLUDE}
-)
+SET (target_SOURCES ${target_CPP} ${target_INCLUDE})
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-SEGS_REGISTER_COMPONENT(Globals "${target_INCLUDE_DIR}" ${target_CPP} ${target_INCLUDE} )
+SEGS_REGISTER_COMPONENT(Globals "${target_INCLUDE_DIR}" "${target_CPP}" ${target_INCLUDE})
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
-
-
-
-
