naked_ace: Add a few missing includes to installed headers SEGS: modified the build system to use the built ACE, also added a missing <cstddef> include to PacketCodec.h

--- a/3rd_party/naked_ace/CMakeLists.txt
+++ b/3rd_party/naked_ace/CMakeLists.txt
@@ -1,8 +1,8 @@
 Project(ace)
 cmake_minimum_required(VERSION 2.8)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/out/bin/${CMAKE_BUILD_TYPE})
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/out/lib/${CMAKE_BUILD_TYPE})
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/out/lib/${CMAKE_BUILD_TYPE})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/out/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/out/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/out/lib)
 IF(WIN32)
     SET(OS_NAME win32)
 ENDIF()
@@ -16,19 +16,3 @@ ENDIF()
 CONFIGURE_FILE(ace/config.h.cmake ${PROJECT_SOURCE_DIR}/ace/config.h)
 
 ADD_SUBDIRECTORY( ace )
-#        @KOKYU@ \
-#        @ASNMP@ \
-#        @ACEXML@ \
-#        apps \
-#        bin \
-#        netsvcs \
-#        @protocols@ \
-#        websvcs
-
-if(BUILD_EXAMPLES)
-ADD_SUBDIRECTORY( examples )
-endif()
-
-if(BUILD_TESTS)
-ADD_SUBDIRECTORY( performance-tests tests )
-endif()
