--- a/Projects/CMakeLists.txt
+++ b/Projects/CMakeLists.txt
@@ -1,12 +1,13 @@
+INCLUDE(CMakeDependentOption)
 OPTION(BUILD_CoX "Should the CoX emulation be built?" ON )
 OPTION(BUILD_Examples "Should the Example Projects be built?" OFF)
 
-IF(BUILD_CoX)
+CMAKE_DEPENDENT_OPTION(BUILD_Example01 "Should the first example be built?" OFF "BUILD_Examples" OFF)
+if(BUILD_CoX)
         ADD_SUBDIRECTORY(CoX)
-ENDIF(BUILD_CoX)
+endif()
 
 IF(BUILD_Examples)
-        SET(BUILD_Example01 FALSE CACHE BOOL "Should the first example be built?")
     IF(BUILD_Example01)
         ADD_SUBDIRECTORY(Example01)
     ENDIF(BUILD_Example01)
