--- a/Components/Common/EventSystem/CMakeLists.txt
+++ b/Components/Common/EventSystem/CMakeLists.txt
@@ -9,7 +9,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include/LinkLevelEvent.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/SEGSTimer.h
 )
 
-
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 SEGS_ADD_COMPONENT(Globals SOURCE)
@@ -24,6 +23,7 @@ INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${ACE_path})
 
 ADD_LIBRARY(EventSystem STATIC ${target_SOURCES})
+add_dependencies(EventSystem ACE_BUILD)
 
 SEGS_REGISTER_COMPONENT(EventSystem "${target_INCLUDE_DIR}" "${target_CPP}" "${target_INCLUDE}" )
 
