--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ SET(CMAKE_INCLUDE_PATH ${MAIN_INCLUDE_PATH})
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts;${CMAKE_MODULE_PATH})
 SET(UNICODE TRUE)
 
-OPTION(SCRIPTING_ENGINE "Build experimental scripting engine ?" OFF)
+OPTION(ENABLE_SCRIPTING_ENGINE "Build experimental scripting engine ?" OFF)
 
 SET(PostgreSQL_ADDITIONAL_VERSIONS "9.2")
 ########################################################################################
@@ -37,10 +37,13 @@ SET(ACE_LIBRARIES ACE)
 find_package(Threads REQUIRED)
 find_package(ZLIB REQUIRED)
 find_package(PostgreSQL REQUIRED) # PostgreSQL
+
+
 ########################################################################################
 # Optional components
 ########################################################################################
-if(SCRIPTING_ENGINE)
+
+if(ENABLE_SCRIPTING_ENGINE)
     FIND_PACKAGE(Ruby REQUIRED)
     ExternalProject_Add(
         MRUBY_BUILD
@@ -59,8 +62,10 @@ if(SCRIPTING_ENGINE)
     LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/3rd_party/mruby/build/host/lib)
     SET(MRuby_LIBRARIES mruby)
 endif()
+
 link_directories(${PROJECT_SOURCE_DIR}/3rd_party/lib)
 include_directories(${PROJECT_SOURCE_DIR}/3rd_party/include)
+include_directories(${PROJECT_SOURCE_DIR}/include)
 
 include(SEGS_Components)
 
