Wrapper Generator Prototype
I am ashamed of how far I'm willing to go to reduce the amount of hand-

WrapperGenerator.h is using variadic templates + tuple expansion trick
to generate all wrappers of the form:
Extract arguments from ruby, and call func.
It lacks argument type and argument extraction checking right now.

--- a/Components/Common/GrowingBuffer/CMakeLists.txt
+++ b/Components/Common/GrowingBuffer/CMakeLists.txt
@@ -12,5 +12,8 @@ SET (target_SOURCES
 ${target_CPP}
 ${target_INCLUDE}
 )
+if(ENABLE_SCRIPTING_ENGINE)
+    SEGS_ADD_COMPONENT(MRuby LIB)
+endif()
 
 SEGS_REGISTER_COMPONENT(GrowingBuffer "${target_INCLUDE_DIR}" "${target_CPP}" "${target_INCLUDE}" )
