First scripting tests.
The second test crashes for now, this will be fixed as soon as mruby has
mrb_panic integrated into it's code base.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ if(ENABLE_TESTS)
         INSTALL_DIR ${PROJECT_SOURCE_DIR}/3rd_party/
         CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>
     )
+    set(GTest_LIBRARIES gtest gtest_main)
 endif()
 link_directories(${PROJECT_SOURCE_DIR}/3rd_party/lib)
 include_directories(${PROJECT_SOURCE_DIR}/3rd_party/include)
