Updated the line endings modes for java/cs files

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,8 @@
 *.cpp text
 *.h text
 *.sql text
+*.java text
+*.cs text
 
 # Declare files that will always have CRLF line endings on checkout.
 *.sln text eol=crlf
