WIP: CMakeLists.txt changed postgres path names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,8 @@ SET(ACE_LIBRARIES ACE)
 find_package(Threads REQUIRED)
 find_package(ZLIB REQUIRED)
 find_package(PostgreSQL REQUIRED) # PostgreSQL
-
+link_directories(${PostgreSQL_LIBRARY_DIRS})
+#-DBUILD_OSG_APPLICATIONS:BOOL=OFF -DOSG_GL1_AVAILABLE:BOOL=OFF -DOSG_GL2_AVAILABLE:BOOL=OFF -DOSG_GL_DISPLAYLISTS_AVAILABLE:BOOL=OFF -DOSG_GL_FIXED_FUNCTION_AVAILABLE:BOOL=OFF -DOSG_GL_MATRICES_AVAILABLE:BOOL=OFF -DOSG_GL_VERTEX_ARRAY_FUNCS_AVAILABLE:BOOL=OFF -DOSG_GL_VERTEX_FUNCS_AVAILABLE:BOOL=OFF -DOSG_USE_QT:BOOL=OFF
 
 ########################################################################################
 # Optional components
