--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -3,12 +3,12 @@ ${CMAKE_CURRENT_SOURCE_DIR}/MapManager.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/MapTemplate.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/MapInstance.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/MapClient.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/MapHandler.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/MapServer.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/EntityStorage.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/MapEventFactory.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/MapLink.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/NetCommandManager.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/WorldSimulation.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/NewEntity.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/SceneEvent.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/EntitiesResponse.cpp
@@ -22,12 +22,12 @@ ${CMAKE_CURRENT_SOURCE_DIR}/MapTemplate.h
 ${CMAKE_CURRENT_SOURCE_DIR}/MapInstance.h
 ${CMAKE_CURRENT_SOURCE_DIR}/EntityStorage.h
 ${CMAKE_CURRENT_SOURCE_DIR}/MapClient.h
-${CMAKE_CURRENT_SOURCE_DIR}/MapHandler.h
 ${CMAKE_CURRENT_SOURCE_DIR}/MapLink.h
 ${CMAKE_CURRENT_SOURCE_DIR}/MapEvents.h
 ${CMAKE_CURRENT_SOURCE_DIR}/MapRef.h
 ${CMAKE_CURRENT_SOURCE_DIR}/MapServer.h
 ${CMAKE_CURRENT_SOURCE_DIR}/MapEventFactory.h
+${CMAKE_CURRENT_SOURCE_DIR}/WorldSimulation.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/NewEntity.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/SceneEvent.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/ChatMessage.h
