--- a/Projects/CoX/Common/Servers/CMakeLists.txt
+++ b/Projects/CoX/Common/Servers/CMakeLists.txt
@@ -9,6 +9,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/ServerHandle.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/ServerManager.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/InterfaceManager.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Database.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/PsqlDatabase.cpp
 #${CMAKE_CURRENT_SOURCE_DIR}/CRUD_Link.cpp
 )
 SET(target_INCLUDE
@@ -27,6 +28,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/Database.h
 ${CMAKE_CURRENT_SOURCE_DIR}/CRUD_Link.h
 ${CMAKE_CURRENT_SOURCE_DIR}/CRUD_Events.h
 ${CMAKE_CURRENT_SOURCE_DIR}/crud_link.inl
+${CMAKE_CURRENT_SOURCE_DIR}/PsqlDatabase.h
 )
 
 
