Added simplified headless - OpenSceneGraph to auto-built dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,17 @@ ExternalProject_Add(
 SET(ACE_path ${PROJECT_SOURCE_DIR}/3rd_party)
 SET(ACE_LIBRARIES ACE)
 
+ExternalProject_Add(
+   OSG_BUILD
+   URL http://nemerle.eu/naked_osg.tar.gz
+   SOURCE_DIR ${PROJECT_SOURCE_DIR}/3rd_party/naked_osg
+   UPDATE_COMMAND ""
+   INSTALL_DIR ${PROJECT_SOURCE_DIR}/3rd_party/
+   CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR> -DBUILD_OSG_APPLICATIONS:BOOL=OFF -DOSG_GL1_AVAILABLE:BOOL=OFF -DOSG_GL2_AVAILABLE:BOOL=OFF -DOSG_GL_DISPLAYLISTS_AVAILABLE:BOOL=OFF -DOSG_GL_FIXED_FUNCTION_AVAILABLE:BOOL=OFF -DOSG_GL_MATRICES_AVAILABLE:BOOL=OFF -DOSG_GL_VERTEX_ARRAY_FUNCS_AVAILABLE:BOOL=OFF -DOSG_GL_VERTEX_FUNCS_AVAILABLE:BOOL=OFF -DOSG_USE_QT:BOOL=OFF -DLIB_POSTFIX=
+)
+SET(OSG_path ${PROJECT_SOURCE_DIR}/3rd_party)
+
+
 ExternalProject_add(
    SQLite_BUILD
    SOURCE_DIR ${PROJECT_SOURCE_DIR}/3rd_party/naked_sqlite
@@ -49,7 +60,6 @@ SET(SQLite_LIBRARIES sqlite)
 find_package(Threads REQUIRED)
 find_package(ZLIB REQUIRED)
 link_directories(${PostgreSQL_LIBRARY_DIRS})
-#-DBUILD_OSG_APPLICATIONS:BOOL=OFF -DOSG_GL1_AVAILABLE:BOOL=OFF -DOSG_GL2_AVAILABLE:BOOL=OFF -DOSG_GL_DISPLAYLISTS_AVAILABLE:BOOL=OFF -DOSG_GL_FIXED_FUNCTION_AVAILABLE:BOOL=OFF -DOSG_GL_MATRICES_AVAILABLE:BOOL=OFF -DOSG_GL_VERTEX_ARRAY_FUNCS_AVAILABLE:BOOL=OFF -DOSG_GL_VERTEX_FUNCS_AVAILABLE:BOOL=OFF -DOSG_USE_QT:BOOL=OFF
 
 ########################################################################################
 # Optional components
