--- a/Projects/CoX/CMakeLists.txt
+++ b/Projects/CoX/CMakeLists.txt
@@ -1,5 +1,5 @@
-FIND_PACKAGE(OpenSceneGraph REQUIRED osgUtil )
-include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS})
+#FIND_PACKAGE(OpenSceneGraph REQUIRED osgUtil )
+#include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS})
 
 ADD_SUBDIRECTORY(Common)
 ADD_SUBDIRECTORY(Utilities)
